Add project elements to allow version patching

--- a/src/WcfCoreMtomEncoder/WcfCoreMtomEncoder.csproj
+++ b/src/WcfCoreMtomEncoder/WcfCoreMtomEncoder.csproj
@@ -9,6 +9,10 @@
     <Product>WcfCoreMtomEncoder</Product>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <IncludeSymbols>True</IncludeSymbols>
+    <Version></Version>
+    <PackageVersion></PackageVersion>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
